--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -59,7 +59,7 @@ services:
       - |
         SERVICES=
         [
-          {"name": "evolution", "url": "http://proxy:8000/gql"}
+          {"name": "evolution", "url": "http://proxy:8000/gql"},
           {"name": "ug", "url": "http://gql_ug:8000/gql"}
         ]       
     healthcheck:
