--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,7 +1,7 @@
 x-services-volume:
   &system-data-volume
   type: bind
-  source: ./systemdata.rnd.json
+  source: ./systemdata.combined.json
   target: /app/systemdata.json
 
 
@@ -17,8 +17,8 @@ services:
   frontend:
     image: hrbolek/frontend
     environment:
-      - DEMO=False
-      - DEMODATA=True
+      - DEMO=True
+      - DEMODATA=False
       # link na db mimo stack
       # - POSTGRES_HOST=host.docker.internal:5432
       - POSTGRES_HOST=postgres_credentials:5432
@@ -69,9 +69,8 @@ services:
       start_period: 60s
       timeout: 10s
     restart: on-failure:3 # nedojde k restartu pokud je kontejner "unhealthy", maximalne 3 pokusy
-    # ports: #v deploymentu by nebylo zadne mapovani portu
-      # vnejsi port : port, kde sluzbu poskytuje kontejner
-      # - 33000:3000
+    ports: # Pro testování federace lokálně
+      - 33000:3000
     deploy:
       replicas: 1
     depends_on:
@@ -106,8 +105,8 @@ services:
     #   - 33012:8000
     depends_on:
       - postgres_gql
-    # volumes:
-    #   - <<: *system-data-volume
+    volumes:
+      - <<: *system-data-volume
 
 
   postgres_gql:
