--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -57,10 +57,9 @@ services:
       # SERVICES je json array popisujici jednotlive dostupne sluzby
       - PORT=3000
       - |
-        SERVICES=
-        [
-          {"name": "evolution", "url": "http://proxy:8000/gql"},
-          {"name": "ug", "url": "http://gql_ug:8000/gql"}
+        SERVICES=[
+          {"name":"evolution","url":"http://host.docker.internal:8001/gql"},
+          {"name":"ug","url":"http://gql_ug:8000/gql"}
         ]       
     healthcheck:
       # definice, umoznujici provest test, zda je kontejner v poradku (vsimnete si portu a srovnejte s portem v environment)
