--- a/.coveragerc
+++ b/.coveragerc
@@ -1,2 +1,11 @@
 [run]
-concurrency = gevent
+source = src
+branch = true
+
+[report]
+show_missing = true
+skip_covered = false
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise NotImplementedError
